--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>TMIS Ćwiczenia WTF</title>
+	<title>TMIS Ćwiczenia WTF 2023</title>
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
