added new article

--- a/index.html
+++ b/index.html
@@ -44,7 +44,15 @@
 					justo.
 				</p>
 			</article>
-		</section>
+			<article>
+				<h3>Dopisałem to, żeby zobaczyć jak odnotuje to GitHub</h3>
+				<p>
+					Donec tempus iaculis bibendum. Nulla id sapien metus. Cras consequat, purus quis luctus aliquet, dolor augue
+					pulvinar odio, ac maximus tortor turpis et diam. Morbi sit amet commodo turpis, non pellentesque dui. Mauris
+					id neque arcu. Nam non urna ac dui aliquet maximus. Duis quam turpis, commodo at velit id, suscipit auctor
+					justo.
+				</p>
+			</article>		</section>
 		<footer>
 			<p>Tutaj napisałem stopkę mojego dokumentu</p>
 		</footer>
