format code + new section
 git integration tests

--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
 			<h2>Kim jestem</h2>
 			<p>
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sit amet leo nisl. Cras tempus sapien vel
-				malesuada gravida. Maecenas condimentum accumsan orci eu fermentum. Etiam efficitur dui vitae purus interdum,
-				nec condimentum nulla interdum. Donec accumsan in elit nec elementum. Fusce rutrum porta dolor in tempor. Sed at
-				sapien et nisl pulvinar finibus. Fusce scelerisque tincidunt rutrum. Nulla cursus quam lorem, ut pulvinar quam
-				vulputate at. Quisque suscipit fermentum magna sit amet vehicula. Nunc libero nunc, auctor et facilisis non,
+				malesuada gravida. Maecenas condimentum accumsan orci eu fermentum. Etiam efficitur dui vitae purus
+				interdum,
+				nec condimentum nulla interdum. Donec accumsan in elit nec elementum. Fusce rutrum porta dolor in
+				tempor. Sed at
+				sapien et nisl pulvinar finibus. Fusce scelerisque tincidunt rutrum. Nulla cursus quam lorem, ut
+				pulvinar quam
+				vulputate at. Quisque suscipit fermentum magna sit amet vehicula. Nunc libero nunc, auctor et facilisis
+				non,
 				egestas nec odio.
 			</p>
 		</section>
@@ -29,30 +33,46 @@
 			<article>
 				<h3>Co będzie jak skończę to szkolenie?</h3>
 				<p>
-					Donec tempus iaculis bibendum. Nulla id sapien metus. Cras consequat, purus quis luctus aliquet, dolor augue
-					pulvinar odio, ac maximus tortor turpis et diam. Morbi sit amet commodo turpis, non pellentesque dui. Mauris
-					id neque arcu. Nam non urna ac dui aliquet maximus. Duis quam turpis, commodo at velit id, suscipit auctor
+					Donec tempus iaculis bibendum. Nulla id sapien metus. Cras consequat, purus quis luctus aliquet,
+					dolor augue
+					pulvinar odio, ac maximus tortor turpis et diam. Morbi sit amet commodo turpis, non pellentesque
+					dui. Mauris
+					id neque arcu. Nam non urna ac dui aliquet maximus. Duis quam turpis, commodo at velit id, suscipit
+					auctor
 					justo.
 				</p>
 			</article>
 			<article>
 				<h3>Czy to nie powinno być w strukturze jako dziecko "section" z h2?</h3>
 				<p>
-					Donec tempus iaculis bibendum. Nulla id sapien metus. Cras consequat, purus quis luctus aliquet, dolor augue
-					pulvinar odio, ac maximus tortor turpis et diam. Morbi sit amet commodo turpis, non pellentesque dui. Mauris
-					id neque arcu. Nam non urna ac dui aliquet maximus. Duis quam turpis, commodo at velit id, suscipit auctor
+					Donec tempus iaculis bibendum. Nulla id sapien metus. Cras consequat, purus quis luctus aliquet,
+					dolor augue
+					pulvinar odio, ac maximus tortor turpis et diam. Morbi sit amet commodo turpis, non pellentesque
+					dui. Mauris
+					id neque arcu. Nam non urna ac dui aliquet maximus. Duis quam turpis, commodo at velit id, suscipit
+					auctor
 					justo.
 				</p>
 			</article>
 			<article>
 				<h3>Dopisałem to, żeby zobaczyć jak odnotuje to GitHub</h3>
 				<p>
-					Donec tempus iaculis bibendum. Nulla id sapien metus. Cras consequat, purus quis luctus aliquet, dolor augue
-					pulvinar odio, ac maximus tortor turpis et diam. Morbi sit amet commodo turpis, non pellentesque dui. Mauris
-					id neque arcu. Nam non urna ac dui aliquet maximus. Duis quam turpis, commodo at velit id, suscipit auctor
+					Donec tempus iaculis bibendum. Nulla id sapien metus. Cras consequat, purus quis luctus aliquet,
+					dolor augue
+					pulvinar odio, ac maximus tortor turpis et diam. Morbi sit amet commodo turpis, non pellentesque
+					dui. Mauris
+					id neque arcu. Nam non urna ac dui aliquet maximus. Duis quam turpis, commodo at velit id, suscipit
+					auctor
 					justo.
 				</p>
-			</article>		</section>
+			</article>
+			<section>
+				<h2>Tutaj wrzucam zmiany w ramach testów GitHub</h2>
+				<p>
+					Ta linijka wyląduje na GitHub.com
+				</p>
+			</section>
+		</section>
 		<footer>
 			<p>Tutaj napisałem stopkę mojego dokumentu</p>
 		</footer>
