new html tags learning

--- a/index.html
+++ b/index.html
@@ -9,15 +9,22 @@
 </head>
 
 <body>
+	<header>
+		<nav>
+			<a href="index.html">Strona główna</a>
+			<a href="nauka-html.html">Znaczniki HTML</a>
+		</nav>
+	</header>
 	<main>
-		<header>
+		<header id="top">
 			<h1>Praca domowa z M02</h1>
 		</header>
 		<section>
 			<h2>Kim jestem</h2>
 			<p>
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sit amet leo nisl. Cras tempus sapien vel
-				malesuada gravida. Maecenas condimentum accumsan orci eu fermentum. Etiam efficitur dui vitae purus
+				malesuada gravida. <a href="https://www.google.pl" target="_blank">Maecenas condimentum</a> accumsan
+				orci eu fermentum. Etiam efficitur dui vitae purus
 				interdum,
 				nec condimentum nulla interdum. Donec accumsan in elit nec elementum. Fusce rutrum porta dolor in
 				tempor. Sed at
@@ -26,6 +33,9 @@
 				vulputate at. Quisque suscipit fermentum magna sit amet vehicula. Nunc libero nunc, auctor et facilisis
 				non,
 				egestas nec odio.
+			</p>
+			<p>
+				<a href="#gitHub">Przewiń do artykułu o GitHub</a>
 			</p>
 		</section>
 		<section>
@@ -44,6 +54,19 @@
 			</article>
 			<article>
 				<h3>Czy to nie powinno być w strukturze jako dziecko "section" z h2?</h3>
+				<img src="Lock_icon.png" alt="kłódka" height="80px">
+				<p>
+					Donec tempus iaculis bibendum. Nulla id sapien metus. Cras consequat, purus quis luctus aliquet,
+					dolor augue
+					pulvinar odio, ac maximus tortor turpis et diam. Morbi sit amet commodo turpis, non pellentesque
+					dui. Mauris
+					id neque arcu. Nam non urna ac dui aliquet maximus. Duis quam turpis, commodo at velit id, suscipit
+					auctor
+					justo.
+				</p>
+			</article>
+			<article id="gitHub">
+				<h3>Dopisałem to, żeby zobaczyć jak odnotuje to GitHub</h3>
 				<p>
 					Donec tempus iaculis bibendum. Nulla id sapien metus. Cras consequat, purus quis luctus aliquet,
 					dolor augue
@@ -55,7 +78,31 @@
 				</p>
 			</article>
 			<article>
-				<h3>Dopisałem to, żeby zobaczyć jak odnotuje to GitHub</h3>
+				<h3>Kolejne artykuły, żeby wydłużyć stronę</h3>
+				<p>
+					Donec tempus iaculis bibendum. Nulla id sapien metus. Cras consequat, purus quis luctus aliquet,
+					dolor augue
+					pulvinar odio, ac maximus tortor turpis et diam. Morbi sit amet commodo turpis, non pellentesque
+					dui. Mauris
+					id neque arcu. Nam non urna ac dui aliquet maximus. Duis quam turpis, commodo at velit id, suscipit
+					auctor
+					justo.
+				</p>
+			</article>
+			<article>
+				<h3>Kolejne artykuły, żeby wydłużyć stronę</h3>
+				<p>
+					Donec tempus iaculis bibendum. Nulla id sapien metus. Cras consequat, purus quis luctus aliquet,
+					dolor augue
+					pulvinar odio, ac maximus tortor turpis et diam. Morbi sit amet commodo turpis, non pellentesque
+					dui. Mauris
+					id neque arcu. Nam non urna ac dui aliquet maximus. Duis quam turpis, commodo at velit id, suscipit
+					auctor
+					justo.
+				</p>
+			</article>
+			<article>
+				<h3>Kolejne artykuły, żeby wydłużyć stronę</h3>
 				<p>
 					Donec tempus iaculis bibendum. Nulla id sapien metus. Cras consequat, purus quis luctus aliquet,
 					dolor augue
@@ -73,10 +120,10 @@
 				</p>
 			</section>
 		</section>
-		<footer>
-			<p>Tutaj napisałem stopkę mojego dokumentu</p>
-		</footer>
 	</main>
+	<footer>
+		<p>Tutaj napisałem stopkę mojego dokumentu <a href="#top">Wróć na górę</a></p>
+	</footer>
 </body>
 
 </html>
