added notes on css page

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 		</section>
 	</main>
 	<footer>
-		<p>Tutaj napisałem stopkę mojego dokumentu <a href="#top">Wróć na górę</a></p>
+		<p><br><hr>Tutaj napisałem stopkę mojego dokumentu <a href="#top">Wróć na górę</a></p>
 	</footer>
 	<script>
 		console.log('Witaj internauto! ;) To jest strona główna')
