--- a/nauka-html.html
+++ b/nauka-html.html
@@ -32,7 +32,7 @@
                 <h2 class="header-2">&lt;link&gt;</h2>
                 <p>
                     Do dodania odnośnika do innego pliku, z którego zawartości będziemy w danym dokumencie korzystać.
-                    Chwilowo (2023-07-18) jedyne poznane zastosowanie to podlinkowanie arkusza styli.<br/>
+                    Chwilowo (2023-07-18) jedyne poznane zastosowanie to podlinkowanie arkusza styli.<br />
                     Link do css powinien wyglądać tak:
                     &lt;link href="style.css" rel="stylesheet" type="text/css"&gt;,<br>
                     gdzie style.css to nazwa pliku
@@ -40,12 +40,14 @@
             </article>
         </section>
         <footer>
-            <p>Tutaj napisałem stopkę mojego dokumentu <a href="#top">Wróć na górę</a></p>
+            <p><br>
+                <hr>Tutaj napisałem stopkę mojego dokumentu <a href="#top">Wróć na górę</a>
+            </p>
         </footer>
     </main>
     <script>
-		console.log('Witaj internauto! ;) To jest strona dot. HTML')
-	</script>
+        console.log('Witaj internauto! ;) To jest strona dot. HTML')
+    </script>
 </body>
 
 </html>
