--- a/nauka-css.html
+++ b/nauka-css.html
@@ -22,7 +22,7 @@
         </header>
         <section>
             <article>
-                <h2 class="header-2">Specyficzność w CSS</h2>
+                <h2 class="topic-header">Specyficzność w CSS</h2>
                 <p>
                     W CSS obowiązuje określona hierarchia reguł stylowania. Ważność jak poniżej (malejąco):
                 <ol>
@@ -37,9 +37,85 @@
                 (bliższa jest zawsze reguła bliższa dołowi pliku css albo ta, która jest w samym pliku html)
                 </p>
             </article>
+            <article>
+                <h2 class="topic-header">display</h2>
+                <p>
+                    możliwe wartości: block, inline, inline-block
+                </p>
+            </article>
+            <article>
+                <h2 class="topic-header">overflow - jak wyświetlać to, co nie mieści się w kontenerze</h2>
+                <p>
+                <ol>
+                    <li>hidden - ukrywa</li>
+                    <li>visible - pokazuje (nawet jeśli nałoży się na coś innego)</li>
+                </ol>
+                </p>
+            </article>
+            <article>
+                <h2 class="topic-header">Jednostki w css</h2>
+                <p>
+                <ol>
+                    <li>px - piksele</li>
+                    <li>% - procent (wymiaru kontenera)</li>
+                    <li>vw - viewport width (procent szerokości okna przeglądarki)</li>
+                    <li>vh - viewport height (procent wysokości okna przeglądarki)</li>
+                </ol>
+                </p>
+            </article>
+            <article>
+                <h2 class="topic-header">box-sizing - jak przeglądarka ma liczyć podane wymiary w odniesieniu do
+                    padding, border</h2>
+                <p>
+                <ol>
+                    <li>content-box - domyślne zachowanie przeglądarki; podane własności stosuje się do samego contentu,
+                        padding i border
+                        doliczane są "na zewnątrz"</li>
+                    <li>border-box - podane własności stosuje się contentu+padding+border, czyli np. podany max-width
+                        będzie
+                        odnosił się sumy szerokości tych 3 składowych <strong>Obecnie stosuje się jako standard</strong>
+                    </li>
+                </ol>
+                </p>
+            </article>
+            <article>
+                <h2 class="topic-header">position</h2>
+                <p>
+                <ol>
+                    <li>static - domyślne w przeglądarce; przeglądarka wylicza pozycje na podstawie display, borderów
+                    </li>
+                    <li>relative - stwarza "przestrzeń" dla umiejscawiania elementów z position: absolute</li>
+                    <li>absolute - element z tą własnością można dowolnie umiejscowić <strong>względem elementu rodzica
+                            o
+                            position: relative. </strong>Element z takim position można umiejscowić za pomocą własności:
+                        top, right, bottom, left (podaje się je osobno w definicji stylu; nie w "position") -> wskazują na pozycję względem brzegu elementu rodzica (z
+                        uwzględnieniem jego paddingu)</li>
+                </ol>
+                </p>
+            </article>
+            <article>
+                <h2 class="topic-header">z-index</h2>
+                <p>
+                <ol>
+                    <li></li>
+                    <li></li>
+                </ol>
+                </p>
+            </article>
+            <article>
+                <h2 class="topic-header">tbd</h2>
+                <p>
+                <ol>
+                    <li></li>
+                    <li></li>
+                </ol>
+                </p>
+            </article>
         </section>
         <footer>
-            <p>Tutaj napisałem stopkę mojego dokumentu <a href="#top">Wróć na górę</a></p>
+            <p><br>
+                <hr>Tutaj napisałem stopkę mojego dokumentu <a href="#top">Wróć na górę</a>
+            </p>
         </footer>
     </main>
     <script>
