--- a/nauka-html.html
+++ b/nauka-html.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Znaczniki HTML</title>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="normalize.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -39,12 +40,12 @@
                 </p>
             </article>
         </section>
-        <footer>
-            <p><br>
-                <hr>Tutaj napisałem stopkę mojego dokumentu <a href="#top">Wróć na górę</a>
-            </p>
-        </footer>
     </main>
+    <footer>
+        <p><br>
+            <hr>Tutaj napisałem stopkę mojego dokumentu <a href="#top">Wróć na górę</a>
+        </p>
+    </footer>
     <script>
         console.log('Witaj internauto! ;) To jest strona dot. HTML')
     </script>
