--- a/nauka-css.html
+++ b/nauka-css.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Info o CSSL</title>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="normalize.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -125,16 +126,17 @@
                 </ol>
                 </p>
             </article>
-        </section>
-        <article>
-            <h2 class="topic-header">Normalizacja</h2>
-            <p>
-                Dołączenie do podlinkowanych plików css pliku normalize.css przygotowanego przez kogoś i wystawianego na
-                GitHub <a href="https://necolas.github.io/normalize.css/" target="_blank">tutaj</a>.
-                Celem tego pliku jest usunięcie na start wszystkich styli nadanych przez przeglądarkę (różne
-                przeglądarki). Plik css dołączamy w całości i nie modyfikujemy go.
-                <br>Dodatkowo warto do własnego stylesheet css dodać dwie reguły z zakresu "reset":
-            <pre class="code">
+
+            <article>
+                <h2 class="topic-header">Normalizacja</h2>
+                <p>
+                    Dołączenie do podlinkowanych plików css pliku normalize.css przygotowanego przez kogoś i
+                    wystawianego na
+                    GitHub <a href="https://necolas.github.io/normalize.css/" target="_blank">tutaj</a>.
+                    Celem tego pliku jest usunięcie na start wszystkich styli nadanych przez przeglądarkę (różne
+                    przeglądarki). Plik css dołączamy w całości i nie modyfikujemy go.
+                    <br>Dodatkowo warto do własnego stylesheet css dodać dwie reguły z zakresu "reset":
+                <pre class="code">
     html {
         box-sizing: border-box;
         }
@@ -142,14 +144,24 @@
     *, *:before, *:after {
         box-sizing: inherit;
     }</pre>
-            </p>
-        </article>
-        <footer>
-            <p><br>
-                <hr>Tutaj napisałem stopkę mojego dokumentu <a href="#top">Wróć na górę</a>
-            </p>
-        </footer>
+                </p>
+            </article>
+            <article>
+                <h2 class="topic-header">BEM</h2>
+                <p>BEM - Block - Element - Modifier
+                <ol>
+                    <li>Sposób zapisu nazwy klasy: block__element--modifier
+                    </li>
+                </ol>
+                </p>
+            </article>
+        </section>
     </main>
+    <footer>
+        <p><br>
+            <hr>Tutaj napisałem stopkę mojego dokumentu <a href="#top">Wróć na górę</a>
+        </p>
+    </footer>
     <script>
         console.log('Witaj internauto! ;) To jest strona dot. CSS')
     </script>
