lower vs upper case corrections

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="PL">
+<html lang="pl">
 
 <head>
 	<meta charset="UTF-8">
@@ -56,7 +56,7 @@
 			</article>
 			<article>
 				<h3 class="header-2">Czy to nie powinno być w strukturze jako dziecko "section" z h2?</h3>
-				<img src="Lock_icon.png" alt="kłódka" height="80">
+				<img src="lock_icon.png" alt="kłódka" height="80">
 				<p>
 					Donec tempus iaculis bibendum. Nulla id sapien metus. Cras consequat, purus quis luctus aliquet,
 					dolor augue
