added header filled with text by js

--- a/index.html
+++ b/index.html
@@ -128,9 +128,7 @@
 		<hr>
 		<p>Tutaj napisałem stopkę mojego dokumentu <a href="#top">Wróć na górę</a></p>
 	</footer>
-	<script>
-		console.log('Witaj internauto! ;) To jest strona główna')
-	</script>
+	<script defer src="/main.js"></script>
 </body>
 
 </html>
