--- a/nauka-html.html
+++ b/nauka-html.html
@@ -22,6 +22,7 @@
             <h1 class="page-title">Poniżej lista ciekawych znaczników html - notatki z kursu WTF</h1>
         </header>
         <section class="section">
+            <h2 class="section__title section__title--js"></h2>
             <article class="article">
                 <h2 class="article__title">&lt;main&gt;</h2>
                 <p>
@@ -49,6 +50,7 @@
     <script>
         console.log('Witaj internauto! ;) To jest strona dot. HTML')
     </script>
+    <script defer src="/main.js"></script>
 </body>
 
 </html>
