added sticky navigation, styles on content

--- a/nauka-html.html
+++ b/nauka-html.html
@@ -10,15 +10,15 @@
 </head>
 
 <body>
-    <header>
+    <header class="page-header">
         <nav class="navigation main-nav">
             <a class="navigation__link" href="index.html">Strona główna</a>
             <a class="navigation__link" href="nauka-html.html">Znaczniki HTML</a>
             <a class="navigation__link" href="nauka-css.html">Nauka CSS</a>
         </nav>
     </header>
-    <main class="main-content">
-        <header id="top">
+    <main class="main-content" id="top">
+        <header>
             <h1 class="page-title">Poniżej lista ciekawych znaczników html - notatki z kursu WTF</h1>
         </header>
         <section class="section">
