--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-	<header>
-		<nav class="navigation main-nav" id="top">
+	<header class="page-header">
+		<nav class="navigation main-nav">
 			<a class="navigation__link" href="index.html">Strona główna</a>
 			<a class="navigation__link" href="nauka-html.html">Znaczniki HTML</a>
 			<a class="navigation__link" href="nauka-css.html">Nauka CSS</a>
@@ -19,7 +19,7 @@
 	</header>
 	<main class="main-content">
 		<header>
-			<h1 class="page-title">Praca domowa z M02</h1>
+			<h1 class="page-title" id="top">Prace domowe z kolejnych modułów WTF</h1>
 		</header>
 		<section class="section">
 			<h2 class="section__title">Kim jestem</h2>
