added new js script, moved one to separate js file

--- a/nauka-css.html
+++ b/nauka-css.html
@@ -164,6 +164,7 @@
     <script>
         console.log('Witaj internauto! ;) To jest strona dot. CSS')
     </script>
+    <script defer src="/main.js"></script>
 </body>
 
 </html>
