--- a/nauka-html.html
+++ b/nauka-html.html
@@ -51,6 +51,7 @@
         console.log('Witaj internauto! ;) To jest strona dot. HTML')
     </script>
     <script defer src="/main.js"></script>
+    <script defer src="/nauka-html.js"></script>
 </body>
 
 </html>
