changed "to top" btt to position fixed

--- a/index.html
+++ b/index.html
@@ -126,8 +126,9 @@
 	<footer class="page-footer">
 		<br>
 		<hr>
-		<p>Tutaj napisałem stopkę mojego dokumentu <a href="#top">Wróć na górę</a></p>
+		<p>Tutaj napisałem stopkę mojego dokumentu</p>
 	</footer>
+	<div class="go-to-top"><a class="link" href="#top">Wróć na górę</a></div>
 	<script defer src="/main.js"></script>
 </body>
 
