--- a/nauka-html.html
+++ b/nauka-html.html
@@ -44,9 +44,10 @@
     </main>
     <footer class="page-footer">
         <p><br>
-            <hr>Tutaj napisałem stopkę mojego dokumentu <a href="#top">Wróć na górę</a>
+            <hr>Tutaj napisałem stopkę mojego dokumentu</a>
         </p>
     </footer>
+    <div class="go-to-top"><a class="link" href="#top">Wróć na górę</a></div>
     <script>
         console.log('Witaj internauto! ;) To jest strona dot. HTML')
     </script>
