--- a/nauka-css.html
+++ b/nauka-css.html
@@ -158,9 +158,10 @@
     </main>
     <footer>
         <p><br>
-            <hr>Tutaj napisałem stopkę mojego dokumentu <a href="#top">Wróć na górę</a>
+            <hr>Tutaj napisałem stopkę mojego dokumentu</a>
         </p>
     </footer>
+    <div class="go-to-top"><a class="link" href="#top">Wróć na górę</a></div>
     <script>
         console.log('Witaj internauto! ;) To jest strona dot. CSS')
     </script>
